--- a/package.json
+++ b/package.json
@@ -37,37 +37,40 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.5",
-    "@next/eslint-plugin-next": "^12.0.9",
-    "@types/node": "^17.0.13",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@babel/eslint-parser": "7.17.0",
+    "@next/eslint-plugin-next": "12.1.4",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
     "@types/testing-library__jest-dom": "^5.14.2",
     "@types/testing-library__user-event": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "@upleveled/eslint-config-upleveled": "2.4.0",
-    "@upleveled/eslint-plugin-upleveled": "^2.1.0",
-    "eslint": "^8.7.0",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.0.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-sonarjs": "^0.11.0",
-    "eslint-plugin-testing-library": "^5.0.4",
-    "eslint-plugin-unicorn": "^40.1.0",
-    "typescript": "^4.5.5"
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "@upleveled/eslint-config-upleveled": "2.9.0",
+    "@upleveled/eslint-plugin-upleveled": "2.1.3",
+    "eslint": "8.12.0",
+    "eslint-config-react-app": "7.0.0",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest": "26.1.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-plugin-security": "1.4.0",
+    "eslint-plugin-sonarjs": "0.13.0",
+    "eslint-plugin-testing-library": "5.2.0",
+    "eslint-plugin-unicorn": "41.0.1",
+    "typescript": "4.6.3"
   },
   "resolutions": {
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-react": "7.28.0"
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-jest": "26.1.3",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "@typescript-eslint/utils": "5.17.0"
   }
 }
